# gpt-to-chatgpt-py

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py  test.py
src/: __init__.py  test.py
tests/: test.py
